<resources>
    <string name="app_name">Geo Action</string>

    <!--    API Keys   -->
    <string name="backendless_key">E7EF3DA5-FE66-15DC-FF2D-32B0EFA9C800</string>
    <string name="backendless_app_id">C337AADB-C5FF-6F79-FF35-1C8CCE400600</string>
    <string name="backendless_REST_key">9E849FA5-A3A3-2F52-FFEB-EA3529F11400</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCHDz4zO9JeG6JIiNhY9d3IQYiKHYpduDk</string>
    <string name="facebook_app_id">356515418047036</string>
    <string name="shared_preferences_file_key"> com.vladimirkush.geoaction.PREFERENCE_FILE_KEY</string>
    <!--    UI strings   -->
    <string name="login_btn_text">Login</string>
    <string name="login_btn_text2">Back to login</string>
    <string name="register_btn_text">Register</string>
    <string name="password_field_hint">password</string>
    <string name="re_enter_password_field_hint">re-enter password</string>
    <string name="email_field_hint">email</string>


    <!--    Message strings   -->

    <string name="locatioNnotGrantedMsg">This app needs access to your location</string>
    <string name="locatioNnotGrantedTitle">Location Not Found</string>
    <string name="locatioNnotGrantedButtonText">Close app</string>

    <!--    PREFERENCES keys   -->
    <string name="prefs_fb_logged_in">fb_logged_in</string>
    <string name="prefs_tracking_activated">tracking_activated</string>
    <string name="prefs_tracking_permitted">tracking_permitted</string>
    <string name="prefs_tracking_timeout">tracking_timeout</string>
    <string name="prefs_vibrate_permitted">vibrate_permitted</string>
    <string name="prefs_ringtone_uri">ringtone_uri</string>

    <!--    PREFERENCES strings   -->
    <string name="prefstring_tracking_notfbuser">Available only when connected to Facebook</string>
    <string name="prefstring_tracking_isfbuser">When disactivated, your friends will not be able to track you as well</string>
    <string name="prefstring_tracking_timeout">How often you will be alerted if friends are around</string>

    <string name="chose_action_type">Chose action type:</string>
    <string name="reminder">Reminder</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="chose_trigger_area_for_action">Chose trigger area for action:</string>
    <string name="chose_trigger_area_direction">Chose trigger area direction:</string>
    <string name="entering_area">Entering area</string>
    <string name="exiting_area">Exiting area</string>
    <string name="add_reminder_title_and_text">Add reminder title and text:</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="set_up_sms_message">Set up SMS message:</string>
    <string name="to">To:</string>
    <string name="message">Message</string>
    <string name="set_up_email_message">Set up email message:</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="confirm">confirm</string>
    <string name="radius">Radius</string>
    <string name="accept_en">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="top_actions">top actions</string>
    <string name="search">search</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
</resources>
