<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vladimirkush.geoaction.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="9.5">

        <EditText
            android:id="@+id/chpass_pass_one"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword">
        </EditText>

        <EditText
            android:id="@+id/chpass_pass_two"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:height="0dp"
            android:layout_weight="1"
            android:hint="@string/re_enter_password_field_hint"
            android:layout_height="0dp"
            android:inputType="textPassword">
        </EditText>

        <Button
            android:text="@string/confirm"
            android:layout_marginTop="26dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryLight"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:id="@+id/chpass_confirm_button"
            android:onClick="onConfirmClick"
            android:layout_weight="1" />
    </LinearLayout>



</LinearLayout>
